--- a/r5dev/vproj/dedicated.vcxproj
+++ b/r5dev/vproj/dedicated.vcxproj
@@ -81,14 +81,14 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <IncludePath>$(SolutionDir)r5dev\;$(IncludePath);</IncludePath>
-    <LibraryPath>$(SolutionDir)r5dev\thirdparty\detours\libs;$(SolutionDir)r5dev\thirdparty\lzham\libs;$(LibraryPath);</LibraryPath>
+    <LibraryPath>$(LibraryPath)</LibraryPath>
     <OutDir>$(SolutionDir)bin\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)build\$(ProjectName)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <IncludePath>$(SolutionDir)r5dev\;$(IncludePath);</IncludePath>
-    <LibraryPath>$(SolutionDir)r5dev\thirdparty\detours\libs;$(SolutionDir)r5dev\thirdparty\lzham\libs;$(LibraryPath);</LibraryPath>
+    <LibraryPath>$(LibraryPath)</LibraryPath>
     <OutDir>$(SolutionDir)bin\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)build\$(ProjectName)\$(Configuration)\</IntDir>
   </PropertyGroup>
@@ -135,8 +135,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>User32.lib;bcrypt.lib;libprotobuf_x64.lib;liblzham_x64.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(SolutionDir)bin\$(Configuration)\</AdditionalLibraryDirectories>
+      <AdditionalDependencies>bcrypt.lib;user32.lib;libdetours_x64.lib;liblzham_x64.lib;libprotobuf_x64.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)lib\$(Configuration)\</AdditionalLibraryDirectories>
       <ModuleDefinitionFile>..\Dedicated.def</ModuleDefinitionFile>
     </Link>
     <PostBuildEvent>
@@ -168,8 +168,8 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>User32.lib;bcrypt.lib;libprotobuf_x64.lib;liblzham_x64.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(SolutionDir)bin\$(Configuration)\</AdditionalLibraryDirectories>
+      <AdditionalDependencies>bcrypt.lib;user32.lib;libdetours_x64.lib;liblzham_x64.lib;libprotobuf_x64.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)lib\$(Configuration)\</AdditionalLibraryDirectories>
       <ModuleDefinitionFile>..\Dedicated.def</ModuleDefinitionFile>
     </Link>
     <PostBuildEvent>
@@ -252,6 +252,35 @@
     <ClInclude Include="..\thirdparty\detours\include\detver.h" />
     <ClInclude Include="..\thirdparty\detours\include\idetour.h" />
     <ClInclude Include="..\thirdparty\detours\include\syelog.h" />
+    <ClInclude Include="..\thirdparty\lzham\include\lzham.h" />
+    <ClInclude Include="..\thirdparty\lzham\include\lzham_assert.h" />
+    <ClInclude Include="..\thirdparty\lzham\include\lzham_checksum.h" />
+    <ClInclude Include="..\thirdparty\lzham\include\lzham_config.h" />
+    <ClInclude Include="..\thirdparty\lzham\include\lzham_core.h" />
+    <ClInclude Include="..\thirdparty\lzham\include\lzham_helpers.h" />
+    <ClInclude Include="..\thirdparty\lzham\include\lzham_huffman_codes.h" />
+    <ClInclude Include="..\thirdparty\lzham\include\lzham_lzbase.h" />
+    <ClInclude Include="..\thirdparty\lzham\include\lzham_match_accel.h" />
+    <ClInclude Include="..\thirdparty\lzham\include\lzham_math.h" />
+    <ClInclude Include="..\thirdparty\lzham\include\lzham_mem.h" />
+    <ClInclude Include="..\thirdparty\lzham\include\lzham_null_threading.h" />
+    <ClInclude Include="..\thirdparty\lzham\include\lzham_platform.h" />
+    <ClInclude Include="..\thirdparty\lzham\include\lzham_polar_codes.h" />
+    <ClInclude Include="..\thirdparty\lzham\include\lzham_prefix_coding.h" />
+    <ClInclude Include="..\thirdparty\lzham\include\lzham_pthreads_threading.h" />
+    <ClInclude Include="..\thirdparty\lzham\include\lzham_static_lib.h" />
+    <ClInclude Include="..\thirdparty\lzham\include\lzham_symbol_codec.h" />
+    <ClInclude Include="..\thirdparty\lzham\include\lzham_threading.h" />
+    <ClInclude Include="..\thirdparty\lzham\include\lzham_timer.h" />
+    <ClInclude Include="..\thirdparty\lzham\include\lzham_traits.h" />
+    <ClInclude Include="..\thirdparty\lzham\include\lzham_types.h" />
+    <ClInclude Include="..\thirdparty\lzham\include\lzham_utils.h" />
+    <ClInclude Include="..\thirdparty\lzham\include\lzham_vector.h" />
+    <ClInclude Include="..\thirdparty\lzham\include\lzham_win32_threading.h" />
+    <ClInclude Include="..\thirdparty\lzham\lzhamcomp\lzham_comp.h" />
+    <ClInclude Include="..\thirdparty\lzham\lzhamcomp\lzham_lzcomp_internal.h" />
+    <ClInclude Include="..\thirdparty\lzham\lzhamdecomp\lzham_decomp.h" />
+    <ClInclude Include="..\thirdparty\lzham\lzhamdecomp\lzham_lzdecompbase.h" />
     <ClInclude Include="..\thirdparty\spdlog\include\async.h" />
     <ClInclude Include="..\thirdparty\spdlog\include\async_logger-inl.h" />
     <ClInclude Include="..\thirdparty\spdlog\include\async_logger.h" />
